<resources>
    <string name="app_name">UppsalaTourGuide</string>
    <string name="u">U</string>
    <string name="yours">Yours</string>
    <string name="ppsala">ppsala</string>
    <string name="degree">°C</string>
    <string name="whereToGo">Where to go</string>
    <string name="services">Services</string>
    <string name="taste">Taste</string>
    <string name="events">Events</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imageForEvent">imageForEvent</string>
    <string name="serviceImage">serviceImage</string>
    <string name="address">Address:</string>
    <string name="phone">Phone:</string>
    <string name="hours">Hours:</string>
    <string name="restaurantImage">restaurantImage</string>
    <string name="directions">Directions</string>
    <string name="call">Call</string>
    <string name="service">Service:</string>
    <string name="subjectImage">subjectImage</string>
    <string name="asianGrill">Asian Grill</string>
    <string name="driveIn">Dine-in · Takeaway · Delivery</string>
    <string name="addressKung">Kungsängsgatan 20, 753 22 Uppsala</string>
    <string name="phoneAsian">018–10 73 40</string>
    <string name="hoursAsian">11 am - 10 pm</string>
    <string name="interpool">Interpool</string>
    <string name="addressBar">Svartbäcksgatan 11, 753 20 Uppsala</string>
    <string name="phoneBar">018 51 27 12</string>
    <string name="hourBar">3pm - 1am</string>
    <string name="botanicGarden">Botanic Garden</string>
    <string name="hospital">Hospital</string>
    <string name="hospitalAdress">Dag Hammarskjölds Väg 21, 752 37 Uppsala</string>
    <string name="hospitalPhone">018 611 40 68</string>
    <string name="hourHospital">24 hours</string>
    <string name="lucia">ST Lucia Day</string>
    <string name="midsummer">Midsummer</string>
    <string name="botanical">Botanical Garden</string>
    <string name="castle">Uppsala Castle</string>
    <string name="pong">Pong</string>
    <string name="pongService">Dine-in · Takeaway · No-contact delivery</string>
    <string name="pongAdress">Storgatan 27, 753 31 Uppsala</string>
    <string name="pongPhone">018 10 28 28</string>
    <string name="pongHour">10h30 am - 11 pm</string>
    <string name="titleHospital">Hospital</string>
    <string name="barAndClub">Bars and Clubs</string>
    <string name="castleUppsala">Uppsala Castle</string>
    <string name="valborg">Valborg</string>
    <string name="midsummerTitle">Midsummer</string>
    <string name="valborgTitle">Valborg</string>
    <string name="stLucia">ST Lucia Day</string>
    <string name="eventsMain">Events</string>
    <string name="tasteMain">Taste</string>
    <string name="serviceMain">Services</string>
    <string name="placeMain">Where to go</string>
    <string name="asianFragment">Asian</string>
    <string name="europeanFrag">European</string>
</resources>