<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/childImageService"
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightPicture"
        android:layout_margin="@dimen/marginNormal"
        android:adjustViewBounds="true"
        android:contentDescription="@string/serviceImage"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/nameService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginNormal"
        android:layout_marginEnd="@dimen/marginNormal"
        android:layout_marginStart="@dimen/marginNormal"
        android:textColor="#E53935"
        android:textSize="@dimen/textTitle"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/marginNormal"
        android:layout_marginStart="@dimen/marginNormal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/marginEnd"
                android:text="@string/address" />

            <TextView
                android:id="@+id/addressService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginNormal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/marginEnd"
                android:text="@string/phone" />

            <TextView
                android:id="@+id/phoneService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginNormal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/marginEnd"
                android:text="@string/hours" />

            <TextView
                android:id="@+id/hoursService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>